--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -1,36 +1,48 @@
 a.tomato {
   color: #FF6347
 }
-
 a.tomato:hover {
-    color: #ff2f0a;
+  color: #ff2f0a;
 }
-
 .markdown-body a {
   font-weight: bold;
 }
-
 .markdown-body a:hover {
   text-decoration: underline;
 }
-
 .Intro a.tag {
   font-weight: bold;
 }
-
 .Intro a.tag:hover {
   text-decoration: underline;
 }
-
 .Intro a.title {
   color: #4A4A4A;
 }
-
 .Intro a.title:hover {
   color: #2E2E2E;
 }
-
 .Intro a.more {
   padding: 1rem 0 0 0;
   display: block;
+}
+
+.title {
+  color: #FFF;
+}
+.desc {
+  color: #ccc;
+  font-size: 2rem;
+  line-height: 1.5em;
+  font-weight: 400;
+  font-family: "Merriweather", serif;
+  letter-spacing: 0.01rem;
+}
+.logo {
+  display: none;
+}
+@media (min-width: 52em) {
+  .logo {
+    display: block;
+  }
 }
