--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,283 +1,260 @@
-h1, h2, h3,
-h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Open Sans", sans-serif;
+  margin: 0 0 0.3em 0;
+}
+h1 {
+  font-size: 2.8rem;
+  letter-spacing: -1px;
+}
+h2 {
+  font-size: 2.4rem;
+  letter-spacing: 0;
+}
+h3 {
+  font-size: 2.1rem;
+}
+h4 {
+  font-size: 1.9rem;
+}
+h5 {
+  font-size: 1.8rem;
+}
+h6 {
+  font-size: 1.8rem;
+}
+a {
+  color: #00ab6b;
+  transition: color 0.3s ease;
+  text-decoration: none;
+}
+a:hover {
+  color: #2d8a5a;
+}
+p, ul, ol, dl {
+  margin: 0 0 1.75em 0;
+  text-rendering: geometricPrecision;
+}
+ol, ul {
+  padding-left: 3rem;
+}
+ol ol, ul ul, ul ol, ol ul {
+  margin: 0 0 0.4em 0;
+  padding-left: 2em;
+}
+dl dt {
+  float: left;
+  width: 180px;
+  overflow: hidden;
+  clear: left;
+  text-align: right;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-weight: 700;
+  margin-bottom: 1em;
+}
+dl dd {
+  margin-left: 200px;
+  margin-bottom: 1em
+}
+li {
+  margin: 0.4em 0;
+}
+li li {
+  margin: 0;
+}
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: #EFEFEF 1px solid;
+  margin: 3.2em 0;
+  padding: 0;
+}
+blockquote {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 1.75em 0 1.75em -2.2em;
+  padding: 0 0 0 1.75em;
+  border-left: #4A4A4A 0.4em solid;
+}
+blockquote p {
+  margin: 0.8em 0;
+  font-style: italic;
+}
+blockquote small {
+  display: inline-block;
+  margin: 0.8em 0 0.8em 1.5em;
+  font-size: 0.9em;
+  color: #CCC;
+}
+blockquote small:before {
+  content: "\2014 \00A0";
+}
+blockquote cite {
+  font-weight: 700;
+}
+blockquote cite a {
+  font-weight: normal;
+}
+mark {
+  background-color: #fdffb6;
+}
+code, tt {
+  padding: 1px 3px;
+  font-family: Inconsolata, monospace, sans-serif;
+  font-size: 0.85em;
+  white-space: pre-wrap;
+  border: #E3EDF3 1px solid;
+  background: #F7FAFB;
+  border-radius: 2px;
+  -webkit-font-feature-settings: "liga" 0;
+  -moz-font-feature-settings: "liga" 0;
+  font-feature-settings: "liga" 0;
+}
+pre {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0 0 1.75em 0;
+  width: 100%;
+  font-family: Inconsolata, monospace, sans-serif;
+  font-size: 0.9em;
+  white-space: pre;
+  overflow: auto;
+  background: #F7FAFB;
+  border-radius: 3px;
+}
+pre code, pre tt {
+  font-size: inherit;
+  white-space: pre-wrap;
+  background: transparent;
+  border: none;
+  padding: 0;
+}
+kbd {
+  display: inline-block;
+  margin-bottom: 0.4em;
+  padding: 1px 8px;
+  border: #CCC 1px solid;
+  color: #666;
+  text-shadow: #FFF 0 1px 0;
+  font-size: 0.9em;
+  font-weight: 700;
+  background: #F4F4F4;
+  border-radius: 4px;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 1px 0 0 #fff inset;
+}
+table {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 1.75em 0;
+  width: 100%;
+  max-width: 100%;
+  background-color: transparent;
+}
+table th, table td {
+  padding: 8px;
+  line-height: 20px;
+  text-align: left;
+  vertical-align: top;
+  border-top: #EFEFEF 1px solid;
+}
+table th {
+  color: #000;
+}
+table caption + thead tr:first-child th, table caption + thead tr:first-child td, table colgroup + thead tr:first-child th, table colgroup + thead tr:first-child td, table thead:first-child tr:first-child th, table thead:first-child tr:first-child td {
+  border-top: 0;
+}
+table tbody + tbody {
+  border-top: #EFEFEF 2px solid;
+}
+table table table {
+  background-color: #FFF;
+}
+table tbody > tr:nth-child(odd) > td, table tbody > tr:nth-child(odd) > th {
+  background-color: #F6F6F6;
+}
+textarea, select, input {
+  width: 260px;
+  padding: 6px 9px;
+  margin: 0 0 5px 0;
+  outline: 0;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.6rem;
+  font-weight: 100;
+  line-height: 1.4em;
+  background: #fff;
+  border: #e7eef2 1px solid;
+  border-radius: 4px;
+  box-shadow: none;
+  -webkit-appearance: none;
+}
+textarea {
+  width: 100%;
+  max-width: 340px;
+  min-width: 250px;
+  height: auto;
+  min-height: 80px;
+}
+input[type="text"]:focus, input[type="email"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[type="number"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="week"]:focus, input[type="time"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, textarea:focus {
+  border: #bbc7cc 1px solid;
+  background: #fff;
+  outline: none;
+  outline-width: 0;
+}
+select {
+  width: 270px;
+  height: 30px;
+  line-height: 30px;
+}
+button {
+  min-height: 35px;
+  width: auto;
+  display: inline-block;
+  padding: 0.1rem 1.5rem;
+  cursor: pointer;
+  outline: none;
+  text-decoration: none;
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  text-align: center;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-shadow: none;
+  border-radius: 0.3rem;
+  border: rgba(0, 0, 0, 0.05) 0.1em solid;
+  background: #5ba4e5;
+}
+@media (min-width: 40em) {}
+@media (min-width: 52em) {
+  body {
+    font-size: 1.8rem;
+  }
+  h1, h2, h3, h4, h5, h6 {
     line-height: 1.15em;
     margin: 0 0 0.4em 0;
-    font-family: "Open Sans", sans-serif;
-}
-
-h1 {
+  }
+  h1 {
     font-size: 5rem;
     letter-spacing: -2px;
     text-indent: -3px;
-}
-
-h2 {
+  }
+  h2 {
     font-size: 3.6rem;
     letter-spacing: -1px;
-}
-
-h3 {
+  }
+  h3 {
     font-size: 3rem;
     letter-spacing: -0.6px;
-}
-
-h4 {
+  }
+  h4 {
     font-size: 2.5rem;
-}
-
-h5 {
+  }
+  h5 {
     font-size: 2rem;
-}
-
-h6 {
+  }
+  h6 {
     font-size: 2rem;
+  }
 }
-
-a {
-    color: #00ab6b;
-    transition: color 0.3s ease;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #2d8a5a;
-}
-
-p, ul, ol, dl {
-    margin: 0 0 1.75em 0;
-    text-rendering: geometricPrecision;
-}
-
-ol, ul {
-    padding-left: 3rem;
-}
-
-ol ol, ul ul,
-ul ol, ol ul {
-    margin: 0 0 0.4em 0;
-    padding-left: 2em;
-}
-
-dl dt {
-    float: left;
-    width: 180px;
-    overflow: hidden;
-    clear: left;
-    text-align: right;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    font-weight: 700;
-    margin-bottom: 1em;
-}
-
-dl dd {
-    margin-left: 200px;
-    margin-bottom: 1em
-}
-
-li {
-    margin: 0.4em 0;
-}
-
-li li {
-    margin: 0;
-}
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: #EFEFEF 1px solid;
-    margin: 3.2em 0;
-    padding: 0;
-}
-
-blockquote {
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 1.75em 0 1.75em -2.2em;
-    padding: 0 0 0 1.75em;
-    border-left: #4A4A4A 0.4em solid;
-}
-
-blockquote p {
-    margin: 0.8em 0;
-    font-style: italic;
-}
-
-blockquote small {
-    display: inline-block;
-    margin: 0.8em 0 0.8em 1.5em;
-    font-size: 0.9em;
-    color: #CCC;
-}
-
-blockquote small:before { content: "\2014 \00A0"; }
-
-blockquote cite {
-    font-weight: 700;
-}
-
-blockquote cite a { font-weight: normal; }
-
-mark {
-    background-color: #fdffb6;
-}
-
-code, tt {
-    padding: 1px 3px;
-    font-family: Inconsolata, monospace, sans-serif;
-    font-size: 0.85em;
-    white-space: pre-wrap;
-    border: #E3EDF3 1px solid;
-    background: #F7FAFB;
-    border-radius: 2px;
-    -webkit-font-feature-settings: "liga" 0;
-    -moz-font-feature-settings: "liga" 0;
-    font-feature-settings: "liga" 0;
-}
-
-pre {
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0 0 1.75em 0;
-    width: 100%;
-    font-family: Inconsolata, monospace, sans-serif;
-    font-size: 0.9em;
-    white-space: pre;
-    overflow: auto;
-    background: #F7FAFB;
-    border-radius: 3px;
-}
-
-pre code, pre tt {
-    font-size: inherit;
-    white-space: pre-wrap;
-    background: transparent;
-    border: none;
-    padding: 0;
-}
-
-kbd {
-    display: inline-block;
-    margin-bottom: 0.4em;
-    padding: 1px 8px;
-    border: #CCC 1px solid;
-    color: #666;
-    text-shadow: #FFF 0 1px 0;
-    font-size: 0.9em;
-    font-weight: 700;
-    background: #F4F4F4;
-    border-radius: 4px;
-    box-shadow:
-        0 1px 0 rgba(0, 0, 0, 0.2),
-        0 1px 0 0 #fff inset;
-}
-
-table {
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 1.75em 0;
-    width: 100%;
-    max-width: 100%;
-    background-color: transparent;
-}
-
-table th,
-table td {
-    padding: 8px;
-    line-height: 20px;
-    text-align: left;
-    vertical-align: top;
-    border-top: #EFEFEF 1px solid;
-}
-
-table th { color: #000; }
-
-table caption + thead tr:first-child th,
-table caption + thead tr:first-child td,
-table colgroup + thead tr:first-child th,
-table colgroup + thead tr:first-child td,
-table thead:first-child tr:first-child th,
-table thead:first-child tr:first-child td {
-    border-top: 0;
-}
-
-table tbody + tbody { border-top: #EFEFEF 2px solid; }
-
-table table table { background-color: #FFF; }
-
-table tbody > tr:nth-child(odd) > td,
-table tbody > tr:nth-child(odd) > th {
-    background-color: #F6F6F6;
-}
-
-textarea, select, input {
-    width: 260px;
-    padding: 6px 9px;
-    margin: 0 0 5px 0;
-    outline: 0;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.6rem;
-    font-weight: 100;
-    line-height: 1.4em;
-    background: #fff;
-    border: #e7eef2 1px solid;
-    border-radius: 4px;
-    box-shadow: none;
-    -webkit-appearance: none;
-}
-
-textarea {
-    width: 100%;
-    max-width: 340px;
-    min-width: 250px;
-    height: auto;
-    min-height: 80px;
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="url"]:focus,
-input[type="password"]:focus,
-input[type="number"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="week"]:focus,
-input[type="time"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-textarea:focus {
-    border: #bbc7cc 1px solid;
-    background: #fff;
-    outline: none;
-    outline-width: 0;
-}
-
-select {
-    width: 270px;
-    height: 30px;
-    line-height: 30px;
-}
-
-button {
-    min-height: 35px;
-    width: auto;
-    display: inline-block;
-    padding: 0.1rem 1.5rem;
-    cursor: pointer;
-    outline: none;
-    text-decoration: none;
-    color: #fff;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
-    text-align: center;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-shadow: none;
-    border-radius: 0.3rem;
-    border: rgba(0,0,0,0.05) 0.1em solid;
-    background: #5ba4e5;
-}
+@media (min-width: 64em) {}
