--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -4,5 +4,11 @@
 }
 @font-face {
   font-family: 'Open Sans';
+  src: url('../fonts/OpenSans-Bold.ttf');
+  font-weight: bold;
+}
+@font-face {
+  font-family: 'Open Sans';
   src: url('../fonts/OpenSans-Regular.ttf');
+  font-weight: normal;
 }
