--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,14 +1,24 @@
 @font-face {
   font-family: 'Merriweather';
   src: url('../fonts/Merriweather-Light.ttf');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Merriweather';
+  src: url('../fonts/Merriweather-Bold.ttf');
+  font-weight: 700;
+  font-style: normal;
 }
 @font-face {
   font-family: 'Open Sans';
   src: url('../fonts/OpenSans-Bold.ttf');
-  font-weight: bold;
+  font-weight: 700;
+  font-style: normal;
 }
 @font-face {
   font-family: 'Open Sans';
   src: url('../fonts/OpenSans-Regular.ttf');
-  font-weight: normal;
+  font-weight: 400;
+  font-style: normal;
 }
