--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -45,7 +45,7 @@ a.nav:hover {
   color: #FFF;
 }
 .desc {
-  color: #ccc;
+  color: #fff;
   font-size: 2rem;
   line-height: 1.5em;
   font-weight: 400;
